--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^2.18.1",
     "dataloader": "^2.0.0",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^6.2.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
